--- a/values.yaml
+++ b/values.yaml
@@ -3,7 +3,7 @@
 # Declare variables to be passed into your templates.
 
 replicaCount: 1
-
+namespace: ns-argocd-testing
 image:
   repository: nginx
   pullPolicy: IfNotPresent
